# c2pa-check

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  compose.yml  go.mod
.github/workflows/: build.yml  deploy.yml
cmd/api/: Dockerfile  main.go
internal/c2pa/: check.go
scripts/: C.jpg.manifest.json  download.sh  test.sh  test_fail.sh
src/: Dockerfile  main.rs
