[package]
name = "c2pa-check"
version = "0.2.0"
edition = "2024"
authors = ["oleexo"]
license-file = "LICENSE"

[dependencies]
rocket = "0.5.1"
rocket_prometheus = { version = "0.10.1", features = [] }
prometheus = { version = "=0.13", features = ["process"] }
c2pa = { version = "0.49.5", features = ["file_io"] }
tokio = "1.47.0"

[badges]
maintenance = { status = "passively-maintained" }